--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     ],
     "module": "es6",
     "rootDir": "./src",
-    "sourceMap": true,
+    // "sourceMap": true,
     "outDir": "./dist",
     "removeComments": true,
     "esModuleInterop": true,
