--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "tsc --build && webpack --mode production",
     "clean": "tsc --build --clean && rimraf --glob web/dist/*",
-    "test": "jest"
+    "test": "jest",
+    "test-coverage": "jest --coverage"
   },
   "author": "Jacob Knowlton",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@types/jest": "^29.5.12",
     "@webpack-cli/generators": "^3.0.7",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "rimraf": "^5.0.7",
     "ts-jest": "^29.1.5",
     "ts-loader": "^9.5.1",
