--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "typescript": "^5.5.2",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "blessed": "^0.1.81"
   }
 }
