--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "clean": "tsc --build --clean && rimraf --glob web/dist/*",
     "test": "jest",
     "test-coverage": "jest --coverage",
-    "start:terminal": "node ./scripts/terminal.js"
+    "start:terminal": "node ./scripts/terminal.js",
+    "start:web": "cd ./web && http-server ."
   },
   "author": "Jacob Knowlton",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@webpack-cli/generators": "^3.0.7",
+    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "rimraf": "^5.0.7",
