--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@types/blessed": "^0.1.25",
+    "@types/terminal-kit": "^2.5.6",
     "terminal-kit": "^3.1.1"
   }
 }
